# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("gmock_mutant") {
  sources = [
    "gmock_mutant.h",  # gMock helpers
  ]

  deps = [
    "//lib/base",
  ]
}

# Used by linux-gcc-rel to ensure gcc doesn't choke on clang-only flags.
executable("empty_main") {
  sources = [
    "empty_main.cc",
  ]
  deps = [
    "//build/config:exe_and_shlib_deps",
  ]
}

# Targets needed for isolate script to execute.
group("test_scripts_shared") {
  data = [
    "//lib/testing/test_env.py",
    "//lib/testing/xvfb.py",
  ]
}

group("run_perf_test") {
  data = [
    "//lib/testing/scripts/common.py",
    "//lib/testing/scripts/run_gtest_perf_test.py",
    "//lib/testing/scripts/run_performance_tests.py",
    "//lib/testing/scripts/run_performance_tests_wrapper.py",
    "//lib/testing/scripts/run_telemetry_benchmark_as_googletest.py",
    "//tools/perf/generate_legacy_perf_dashboard_json.py",
  ]

  data_deps = [
    ":test_scripts_shared",
  ]
}
